--- a/public/cart.html
+++ b/public/cart.html
@@ -3,13 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script type="text/javascript" src="../src/js/script.js"></script>
+	<script type="text/javascript" src="../src/js/cart.js"></script>
 	<title></title>
 </head>
 <body>
 	<p>А потом раз а капец</p>
-	<div class="product">
-		
-	</div>
+	<p id="product"></p>
 </body>
 </html>
