Script update and UI

--- a/public/index.html
+++ b/public/index.html
@@ -8,25 +8,25 @@
 </head>
 <body>
 	<div class="main">
-		<div class="product__first">
+		<div class="product">
 			<div class="product__description">
-				<img src="../src/images/products/Harry_Potter.png">
-				<p id="nameProd">Гарри Поттер и Принц Полукровка</p>
+				<img src="../src/images/products/Princ.png">
+				<p id="product_name_one">Гарри Поттер и Принц Полукровка</p>
 			</div>
 			<div class="product__buy">
-				<p id="price">1200₽</p>
+				<p id="product_price_one">1200₽</p>
 				<button id="buy" onclick="addToCart()">Добавить в корзину</button>
 			</div>
 		</div>
 		<div class="cart">
-			<div class="cart__description">
+			<!-- <div class="cart__description">
 				<div class="produuct">
 					<p id="cartName">Неизвестный товар</p>
 					<p id="priceName">???₽</p>
 				</div>
 			</div>
 			<div class="product__clear">
-				<button id="buy" onclick="clearCart()">Обнулить корзину</button>
+				<button id="buy" onclick="clearCart()">Обнулить корзину</button> -->
 			</div>
 		</div>
 	</div>
